# SecAlert

./: .env  .env.example  .gitignore  CLAUDE.md  Dockerfile.api  Dockerfile.dlq  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
.obsidian/: workspace.json
.planning/: HANDOFF.json  MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  UAT.md  config.json  v1.0-MILESTONE-AUDIT.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/debug/: .continue-here.md  frontend-ui-layout-issues.md
.planning/milestones/: v1.0-MILESTONE-AUDIT.md  v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md  v1.1-REQUIREMENTS.md  v1.1-ROADMAP.md  v1.2-MILESTONE-AUDIT.md  v1.2-REQUIREMENTS.md  v1.2-ROADMAP.md  v1.3-REQUIREMENTS.md  v1.4-REQUIREMENTS.md  v1.4-ROADMAP.md  (+3 more)
.playwright-mcp/: page-2026-04-01T14-05-48-445Z.yml  page-2026-04-01T14-06-19-267Z.yml  page-2026-04-01T14-06-28-430Z.yml  page-2026-04-01T14-06-48-761Z.yml  page-2026-04-01T14-07-01-014Z.yml  page-2026-04-02T00-58-12-057Z.yml
collector/: test_suricata_eve.json
database/: chat_schema.sql  generate_test_data.py
docs/: Claude Code作为Agent应用后端的实践指南.md  使用Logstash从不同ES数据库版本中接入数据的最佳实践调研.md  团队协作调研.md  多源异构安全日志采集最佳实践调研.md  多源异构日志统一格式归一化为OCSF的调研.md  构建AI友好的项目文档WIKI调研.md  架构优化迭代方案.md  详细设计方案.md  详细设计方案_V2.md  项目落地方案.md  项目调研材料.md
frontend/: Dockerfile.frontend  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  vite.config.ts
kafka/: create-topics.sh
monitoring/: prometheus.yml
parser/: __init__.py  pipeline.py  registry.py
rules/: attck_suricata.yaml  remediation_templates.yaml
scripts/: verify-setup.sh
simulators/: .env.simulators.example  README.md  docker-compose-simulators.yml
storage/: ocsf_mapper.py
tests/: conftest.py  test_data_generator.py  test_e2e_simulation.py  test_vector_pipeline.py
(+395 files in other folders)
