[project]
name = "secalert"
version = "0.1.0"
description = "Security Alert Analysis System"
requires-python = ">=3.10"

[project.optional-dependencies]
dev = ["pytest>=7.4.0", "pytest-asyncio>=0.21.0", "black>=23.0.0"]

# Phase 1 dependencies
parser = [
    "drain3==0.9.11",
    "confluent-kafka==2.13.2",
    "redis>=5.0.0",
    "psycopg2-binary==2.9.10",
    "elasticsearch>=8.11.0",
    "pydantic>=2.5.0",
    "PyYAML>=6.0",
]
ai = [
    "dspy>=2.0.0",
    "vllm>=0.3.0",
]
agent = [
    "claude-agent-sdk>=0.1.53",
]
chain = [
    "python-dateutil>=2.8.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "httpx>=0.24.0",
    "neo4j>=5.0.0",
    "PyYAML>=6.0",
]
reporting = [
    "apscheduler>=3.10.0",
    "weasyprint>=54.0",
    "openpyxl>=3.1.0",
    "jinja2>=3.1.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
asyncio_mode = "auto"

[tool.black]
line-length = 100
target-version = ["py310"]
